--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     
 <!-- Mirrored from cvresumetemplate.com/maha-personal-cv-resume-html-template/home-one.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 01 Jul 2021 20:18:19 GMT -->
 <head>
-        <title> Maha - Personal CV/Resume Template | Home 1 </title>
+        <title>Reza Parvaz</title>
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
