--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="Maha Personal cv/resume template for professional and personal website." />
-        <meta name="keywords" content="creative, cv, designer,  online cv, online resume, powerful portfolio, professional, professional resume, responsive, resume, vcard " />
-        <meta name="developer" content="Md. Siful Islam">
+        <meta name="description" content="Reza Parvaz's personal website" />
+        <meta name="keywords" content="Reza Parvaz resume, Reza Parvaz CV" />
+        <meta name="developer" content="Reza Parvaz">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
         <!-- FAV AND ICONS   -->
